# douyin-generator

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  netlify.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_jobs.py  0002_add_job_storage_dir.py  0003_add_job_edits.py  0004_add_job_final_config.py  0005_add_job_task_and_cancel_fields.py  0006_edit_drafts.py  0007_add_edit_versions.py  0008_auth_tables.py  0009_user_settings_json.py  0010_job_queue_metadata.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  jobs.py  settings.py
backend/app/core/: config.py  health.py
backend/app/models/: __init__.py  auth.py  job.py
backend/app/schemas/: auth.py  job.py  settings.py
backend/app/services/: audio_extractor_service.py  auth_service.py  edit_render_service.py  errors.py  job_service.py  mock_pipeline.py  storage_service.py  subtitle_service.py  transcription_service.py  translation_service.py  tts_service.py  user_settings_service.py  video_renderer_service.py  video_resolver_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: run-api.sh  run-worker.sh  wait_for_services.py
backend/tests/: test_jobs_api.py  test_mock_pipeline.py  test_schemas.py  test_storage_service.py  test_subtitle_service.py  test_transcription_translation_services.py  test_tts_service.py  test_video_renderer_service.py  test_video_resolver_service.py
frontend/: Dockerfile  index.html  (+4 more)
(+174 files in other folders)
